# hyperscale

./: .gitignore  AD26_ISSUES.md  AGENTS.md  CASES.md  CLAUDE.md  EXECUTION_WORKFLOW.md  FIX.md  GATE_SCAN.md  LICENSE  MODULAR_SCAN.md  README.md  REFACTOR.md  SCAN.md  SCENARIOS.md  TODO.md  WAL.md  auto-push.sh  coroutine_factory.py  pyproject.toml  requirements.dev  requirements.in  requirements.txt  requirements.txt.dev  setup.py  step_results.csv  workflow_results.csv
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  run.sh
.github/workflows/: build_docker_image.yml  main.yml  release.yml
docker/images/: Dockerfile  Dockerfile.all-engines
docs/: AD-29-TIMEOUT-PATH-ANALYSIS.md  AD-35-VIVALDI-ROLE-AWARE-FAILURE-DETECTION.md  architecture.md
docs/architecture/: AD_1.md  AD_10.md  AD_11.md  AD_12.md  AD_13.md  AD_14.md  AD_15.md  AD_16.md  AD_17.md  AD_18.md  AD_19.md  AD_2.md  AD_20.md  AD_21.md  AD_22.md  AD_23.md  AD_24.md  AD_25.md  AD_26.md  AD_27.md  AD_28.md  AD_29.md  AD_3.md  AD_30.md  AD_31.md  AD_32.md  AD_33.md  AD_34.md  AD_35.md  AD_36.md  AD_37.md  AD_38.md  AD_39.md  AD_4.md  AD_40.md  AD_41.md  AD_42.md  AD_43.md  AD_44.md  AD_45.md  (+12 more)
docs/dev/: REFACTOR.md  improvements.md  slo.md
examples/: aggregate_test.py  animated_status_bar.py  arg_hash.py  art_text.py  basic_test.py  canvas.py  client_test.py  command.py  command_file_two.py  counter.py  custom_client.py  custom_engine.py  custom_reporter.py  engine_test.py  events.py  example.py  example_test.py  ftp_test.py  hinted_dict.py  lamport_test.py  lettering.py  multiengine.py  observerable.py  optimizer_test.py  progress_bar.py  pyproject.py  rate.py  results.json  ripgrep_example.py  scatter_plot.py  scp_test.py  section.py  server_test.py  slots.py  smtp_test.py  swim_comprehensive_tests.py  swim_edge_case_tests.py  swim_functional_tests.py  swim_probe_stress_test.py  swim_server_1.py  (+25 more)
examples/old/: client_impl.py  gate_impl.py  manager_impl.py  message.py  worker_impl.py
examples/servers/: README.md  __init__.py  gate_1.py  gate_2.py  gate_3.py  gate_4.py  gate_5.py  manager_1.py  manager_2.py  manager_3.py  manager_4.py  manager_5.py  test_consistent_hashing.py  test_context_consistency.py  test_gate_cluster.py  test_gate_job_routing.py  test_gate_job_submission.py  test_gate_manager_cluster.py  test_gate_results_aggregation.py  test_job_submission.py  test_lease_ownership.py  test_manager_cluster.py  test_multi_worker_dispatch.py  test_single_worker.py  test_single_worker_debug.py  test_worker_manager_cluster.py  test_worker_workflow_execution.py  test_workflow_end_to_end.py  test_workflow_stats_push.py  worker_1.py  worker_2.py  worker_3.py  worker_4.py  worker_5.py
examples/swim/: __init__.py  flapping_detector.py  gossip_buffer.py  graceful_degradation.py  health_monitor.py  incarnation_tracker.py  leader_eligibility.py  leader_state.py  local_health_multiplier.py  local_leader_election.py  piggyback_update.py  probe_scheduler.py  resource_limits.py  server.py  suspicion_manager.py  udp_server.py
helm/hyperscale/: Chart.yaml  values.yaml
hyperscale/: graph.py  plugin.py  results.py  testing.py
hyperscale/cli/: base.py  cloud.py  graph.py  ping.py  plugin.py  project.py
hyperscale/commands/: graph.py  hyperscale_config.py  new.py  ping.py  root.py  run.py
hyperscale/core_rewrite/: __init__.py  graph.py  workflow.py
hyperscale/distributed/: monitoring.py
hyperscale/distributed_rewrite/: README.md  __init__.py
hyperscale/logging/: __init__.py  exceptions.py  hyperscale_logger.py  hyperscale_logging_models.py
hyperscale/logging_rewrite/: __init__.py  hyperscale_logger.py  logging_manager.py
hyperscale/metadata/: __init__.py  metadata.py
hyperscale/monitoring/: __init__.py
tests/: conftest.py
(+3466 files in other folders)
